<resources>
    <string name="app_name">Productive</string>
    <string name="title_home">Rewards</string>
    <string name="title_dashboard">To-do</string>
    <string name="title_notifications">Calendar</string>
    <string name="task_scheduled">TASK_SCHEDULED</string>
    <string name="month_name">MONTH_NAME</string>
    <string name="addTaskPrompt">Tap \'Add Task\' to add a new Task</string>
    <string name="addTaskPromptCalendar">Add tasks from To-do to see them here</string>
    <string name="add">Add Task</string>
    <string name="rewards">Rewards</string>
    <string name="todo">To-do</string>
    <string name="schedule">Calendar</string>
    <string name="my_productivity">My Productivity</string>
    <string name="date_range">Date Range</string>
    <string name="tasks_completed">TASK COMPLETED</string>
    <string name="stats_return">RETURN</string>
    <string name="stats_name">Name</string>
    <string name="submit">Submit</string>
    <string name="streak">Streak Bonus: </string>
    <string name="titles">Slayer of TASKS</string>
    <string name="coins">1111</string>
    <string name="level">35</string>
...
