<?xml version="1.0" encoding="utf-8"?>

<TextView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/text1"
    style="?attr/spinnerDropDownItemStyle"
    android:layout_width="match_parent"
    android:layout_height="?attr/dropdownListPreferredItemHeight"
    android:ellipsize="marquee"
    android:textSize="18dp"
    android:textStyle="bold"
    android:textColor="@color/pastel_red"
    android:background="@color/smoke_black"
    android:textAlignment="center"/>