<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="408dp"
        android:layout_height="350dp"
        android:layout_marginTop="4dp"
        android:background="#F4F4F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="Submit"
        android:onClick="editTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="287dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskNameForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Name" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/datePickerButton"
        style="?android:spinnerStyle"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/switchDeadline"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.083" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:text="Deadline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/popupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Task"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:text="Priority"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchDeadline"
        app:layout_constraintVertical_bias="0.28" />

    <RadioGroup
        android:id="@+id/priorityGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/datePickerButton"
        app:layout_constraintVertical_bias="0.211">

        <RadioButton
            android:id="@+id/highButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="High"
            tools:layout_editor_absoluteX="198dp"
            tools:layout_editor_absoluteY="203dp" />

        <RadioButton
            android:id="@+id/medButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium"
            tools:layout_editor_absoluteX="281dp"
            tools:layout_editor_absoluteY="203dp" />

        <RadioButton
            android:id="@+id/lowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Low"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="203dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:text="Difficulty"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priorityGroup"
        app:layout_constraintVertical_bias="0.594" />

    <RadioGroup
        android:id="@+id/difficultyGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/priorityGroup">

        <RadioButton
            android:id="@+id/hardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hard"
            tools:layout_editor_absoluteX="198dp"
            tools:layout_editor_absoluteY="203dp" />

        <RadioButton
            android:id="@+id/medDiffButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium"
            tools:layout_editor_absoluteX="281dp"
            tools:layout_editor_absoluteY="203dp" />

        <RadioButton
            android:id="@+id/easyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Easy"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="203dp" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>