...

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskDisplayView"
        android:layout_width="597dp"
        android:layout_height="600dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@+id/newTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

...
